<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/einTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/neues_konto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/title_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- Von Konto Nummer -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/einKontoNrDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space"
                    android:text="@string/nummer"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/einKontoNr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/einKontoNrDesc"
                    android:inputType="number"
                    android:textSize="@dimen/text_size" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />
            <!-- Von Konto Name -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/einKontoNameDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space"
                    android:text="@string/name"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/einKontoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/einKontoNameDesc"
                    android:textSize="@dimen/text_size" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <!-- Betrag -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/einBetragDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space"
                    android:text="@string/betrag"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/einBetrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/einBetragDesc"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_size" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <Button
                android:id="@+id/einButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonselect"
                android:text="@string/submit"
                android:textColor="@color/text_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/company"
                android:textColor="@color/main"
                android:textSize="@dimen/title_size" />

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/main"
                android:textSize="@dimen/title_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>